@@ -11536,6 +11536,8 @@ ags_audio_open_audio_file_as_channel(AgsAudio *audio,
       for(j = 0; j < audio_channels && audio_signal != NULL; j++){
 	AgsRecycling *recycling;
 	
+	AgsFileLink *file_link;
+	
 	/* get channel mutex */
 	pthread_mutex_lock(ags_channel_get_class_mutex());
 	  
@@ -11547,8 +11549,25 @@ ags_audio_open_audio_file_as_channel(AgsAudio *audio,
 	pthread_mutex_lock(channel_mutex);
 
 	recycling = channel->first_recycling;
+
+	file_link = AGS_INPUT(channel)->file_link;
 	
 	pthread_mutex_unlock(channel_mutex);
+
+	/* set filename and channel */
+	if(file_link == NULL){
+	  file_link = g_object_new(AGS_TYPE_AUDIO_FILE_LINK,
+				   NULL);
+      
+	  g_object_set(channel,
+		       "file-link", file_link,
+		       NULL);
+	}
+	  
+	g_object_set(file_link,
+		     "filename", filename->data,
+		     "audio-channel", j,
+		     NULL);
 
 	/* get recycling mutex */
 	pthread_mutex_lock(ags_recycling_get_class_mutex());
